--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">calculator</string>
+    <string name="app_name">Calculator</string>
+    <string name="About_app">About app</string>
+    <string name="About_me">About me</string>
+    <string name="Style">Style</string>
 </resources>
